# crisprme2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  ci.yml
include/: kernels.hh
scripts/: pyproject.toml  warp_alignment.py
src/: align.rs  fasta.rs  ffi.rs  kernels.cu  main.rs  mine.cu  mine.rs  ptree.rs  utils.rs
