[package]
name = "crisprme2"
version = "0.1.0"
edition = "2021"
description = "TODO"
repository = "https://github.com/z1ko/crisprme2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "2.0.1"
cxx = { version = "1.0.156", features = ["c++17"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.156"
